# FedCCML

./: .gitignore  README.md  pyproject.toml  requirements.txt
fedccml/: __init__.py  client.py  data.py  main.py  models.py  prepare_data.py  server.py
scripts/: run_cifar100_dir01.ps1  run_cifar100_dir01.sh
