[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fedccml"
version = "0.1.0"
description = "PyTorch implementation of FedCCML"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
  {name = "Haotian Shen"},
  {name = "Changli Zhou"},
  {name = "Zhenyu Jiang"}
]
dependencies = [
  "torch",
  "torchvision",
  "numpy",
  "h5py",
  "pillow"
]

[tool.setuptools.packages.find]
include = ["fedccml*"]
